# LLM_CHAT

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/alisa-conversation/: alisa-neurosync-brief.md
docs/neuroexperimenter/: NeuroExperimenter Users Guide.docx
docs/specs/: brainlink-barbanov-notes.md  brainlink-protocol-notes.md  brainlink-third-party-references.md  eeg-mvp-status.md  handoff-todo.md  product-priorities.md  programmer_commands.md  quick_agent.md  session_log_schema.md
docs/sweep-tone-generator/: SweepToneGenerator.md  SweepToneGenrator.md
scripts/: brainlink_com_capture.py  brainlink_com_macrotellect.py  brainlink_compare_macrotellect_ble.py  brainlink_concurrent_capture.py  brainlink_frame_decoder.py  brainlink_frame_splitter.py  brainlink_probe.py  brainlink_stream_capture.py  brainlink_verify_one_session.py
src/neurosync_pro/: __init__.py  bus.py  cli.py
src/neurosync_pro/agent/: __init__.py  server.py
src/neurosync_pro/audio/: __init__.py  engine.py  stream.py
src/neurosync_pro/eeg/: __init__.py  ble_stream.py  live_decode.py  protocol.py  vendor_stream.py
src/neurosync_pro/ui/: __init__.py  ble_thread.py  meditation_poc.py  replay_plot.py  sweep_tone.py
tests/: test_agent_server.py  test_audio_engine.py  test_audio_stream_engine.py  test_ble_stream.py  test_bus.py  test_eeg_protocol.py  test_live_eeg_decoder.py  test_vendor_stream.py
tools/: quick_agent.py
